RESOLVED FIXED278594
[JSC] Fix memory leaks for AbstractHeap in OMGIRGenerator
https://bugs.webkit.org/show_bug.cgi?id=278594
Summary [JSC] Fix memory leaks for AbstractHeap in OMGIRGenerator
Yijia Huang
Reported 2024-08-23 18:13:41 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-23 18:13:49 PDT
Yijia Huang
Comment 2 2024-08-23 18:16:27 PDT
EWS
Comment 3 2024-08-24 18:19:36 PDT
Committed 282707@main (bfe0238da5a9): <https://commits.webkit.org/282707@main> Reviewed commits have been landed. Closing PR #32658 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.