Cherry-pick 282707@main (bfe0238da5a9). https://bugs.webkit.org/show_bug.cgi?id=278594

[JSC] Fix memory leaks for AbstractHeap in OMGIRGenerator
    https://bugs.webkit.org/show_bug.cgi?id=278594
    rdar://134598934

    Reviewed by Yusuke Suzuki.

    Use unique_ptr for the AbstractHeap fields defined in
    OMGIRGenerator to avoid memory leaks.

    * Source/JavaScriptCore/wasm/WasmOMGIRGenerator.cpp:

    Canonical link: https://commits.webkit.org/282707@main

Canonical link: https://commits.webkit.org/282416.57@webkitglib/2.46